@@ -337,6 +337,30 @@
             </build>
         </profile>
         <profile>
+            <id>java14-compile</id>
+            <activation>
+                <jdk>14</jdk>
+                <file>
+                    <missing>DEFAULTJDKONLY.marker</missing>
+                </file>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <target>14</target>
+                            <compilerArgs>
+                                <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>jvmtestsonly</id>
             <build>
                 <plugins>
